--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,12 @@
-# crewai
-transformers
-torch
-datasets
-huggingface_hub
-accelerate
-streamlit
-google-generativeai
-python-dotenv
-langchain
-chromadb
-faiss-cpu
-langchain_google_genai
-langchain-community
-PyPDF2
-sentence-transformers
+streamlit==1.29.0
+PyPDF2==3.0.1
+sentence-transformers==2.3.1
+langchain==0.1.0
+langchain-community==0.0.20
+faiss-cpu==1.7.4
+transformers==4.36.2
+torch==2.1.2
+accelerate==0.25.0
+python-dotenv==1.0.0
+huggingface-hub==0.20.2
+numpy==1.26.2
